--- a/themes/expressbase/scss/components/_menus.scss
+++ b/themes/expressbase/scss/components/_menus.scss
@@ -351,8 +351,8 @@
 }
 /* Menu Icons - for block menus, not main, secondary, footer menus */
 .menu-icon-text {
-  //overflow: hidden;
-  //display: block;
+  overflow: hidden;
+  display: block;
 }
 .hide-text {
   position: absolute !important;
